--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -535,8 +535,9 @@ config MEM_SOFT_DIRTY
 config ZSWAP
 	bool "Compressed cache for swap pages (EXPERIMENTAL)"
 	depends on FRONTSWAP && CRYPTO=y
-	select CRYPTO_LZO
-	select ZPOOL
+	select CRYPTO_LZ4
+        select ZPOOL
+	select BTREE
 	default n
 	help
 	  A lightweight compressed cache for swap pages.  It takes
